--- a/style.css
+++ b/style.css
@@ -295,11 +295,12 @@ footer {
 }
 
 
-.completed {
+.task.completed .task-name {
     transition: 0.2s;
     text-decoration: line-through;
     opacity: 0.5;
 }
+
 
 .fall {
     transition: 0.5s;
