--- a/style.css
+++ b/style.css
@@ -2,29 +2,21 @@
     margin: 0;
     padding: 0;
     box-sizing: border-box;
-    font-family: "Bebas Neue", sans-serif;
+    font-family: "Anta", sans-serif;
     font-weight: 400;
     font-style: normal;
 }
 
-
 body {
-
     align-items: center;
     display: flex;
     flex-direction: column;
-    font-family: 'Work Sans', sans-serif;
+    font-family: "Work Sans", sans-serif;
     min-height: 100vh;
     padding-top: 3%;
 }
 
 /* Body light or darker themes */
-.standard {
-    background-image: linear-gradient(100deg, #575656, #062e3f);
-    color: #ffdfdb;
-    transition: 0.3s linear;
-    overflow: hidden;
-}
 
 .light {
     background-image: linear-gradient(100deg, #d4f1ff, #ffffff);
@@ -38,7 +30,8 @@ body {
     transition: 0.3s linear;
 }
 
-#header, #form {
+#header,
+#form {
     margin: 0 1rem;
     min-height: 10vh;
     width: 100%;
@@ -49,7 +42,7 @@ body {
     display: flex;
     flex-direction: column;
     justify-content: space-around;
-    font-size: 3rem;
+    font-size: 2rem;
     min-height: 25vh;
     width: 100%;
 }
@@ -64,50 +57,42 @@ body {
 }
 
 .theme-selector {
-    border: 1px solid #d1dae3;
     border-radius: 100%;
     height: 35px;
     margin: 0 8px;
-    transition: tranform 150ms ease-in-out, box-shadow 200ms ease-in-out;
     width: 35px;
 }
 
-.theme-selector:hover { 
+.theme-selector:hover {
     box-shadow: white 0 0 8px;
     cursor: pointer;
 }
 
-.theme-selector:active {
-    transform: scale(0.95);
-}
-
-.standard-theme {
-    background-image: linear-gradient(100deg, #575656, #062e3f);
-}
-
 .light-theme {
-    background-image: linear-gradient(100deg, #d4f1ff, #ffffff);
+    background-image: linear-gradient(100deg, #ffffff, #ffffff);
+    border: 2px solid #c7c5c5;
 }
-
 
 .darker-theme {
-    background-image: linear-gradient(100deg, #001214, #001f29);
+    background-image: linear-gradient(100deg, #001214, #000000);
+    border: 2px solid #d4d4d4;
 }
 
 #title {
     white-space: pre;
-    overflow: hidden;     
-    letter-spacing: 0.20rem;
+    overflow: hidden;
+    letter-spacing: 0.2rem;
     margin-top: 50px;
-    margin-bottom: 20px;
-    max-width: 480px;
-  }
-  
+    max-width: auto;
+    text-align: center;
+    padding: 0 20px;
+}
+
 form {
     display: flex;
     font-size: 1.7rem;
     justify-content: center;
-    margin: 15px 0;
+    margin: 0auto;
     padding: 0.8rem;
     width: 100%;
 }
@@ -117,7 +102,6 @@ form input {
     font-size: 17px;
     border: none;
     outline: none;
-    /* border-radius: 15; */
     border-top-left-radius: 17px;
     border-bottom-left-radius: 17px;
     max-width: 500px;
@@ -125,15 +109,8 @@ form input {
     width: 100%;
 }
 
-
-form input.standard-input {
-    background-color: #181a1a;
-    color: rgb(247, 226, 223);
-}
-
-
 form input.light-input {
-    background-color: #AEB1B4;
+    background-color: #aeb1b4;
     color: #1a150e;
 }
 
@@ -156,10 +133,6 @@ form input:hover {
     cursor: text;
 }
 
-form input.standard-input:hover {
-    background-color: rgb(0, 0, 0);
-}
-
 form input.light-input:hover {
     background-color: #919699;
 }
@@ -170,23 +143,11 @@ form input.darker-input:hover {
 
 button {
     border: none;
-    outline: none; 
-    transition: box-shadow 200ms ease, background-color 200ms ease-in-out;
+    outline: none;
 }
 
 button:hover {
     cursor: pointer;
-}
-
-
-button.standard-button {
-    background-color: rgb(247, 226, 223);
-    color: rgb(0, 0, 0);
-}
-
-button.standard-button:hover {
-    background-color: white;
-    box-shadow: #fff8 0 0 10px;
 }
 
 button.light-button {
@@ -214,70 +175,62 @@ form button {
     border-bottom-right-radius: 15px;
     min-width: 100px;
 }
+
 .task-container {
     display: grid;
-    grid-template-columns: 1fr 1fr; /* Definerer to kolonner med lige stor bredde */
-    gap: 300px; /* Tilføjer noget mellemrum mellem kolonnerne */
-    align-items: start; /* Sørger for, at indholdet i toppen af kolonnerne starter på samme niveau */
-    justify-content: center; /* Centrerer grid-containeren i forhold til dens forælder, hvis du ønsker det */
-}
-
-footer {
-    margin-top: auto;
-}
-
-
-#myUnOrdList {
-    display: flex;
+    grid-template-columns: 1fr 1fr;
+    align-items: start;
     justify-content: center;
-    align-items: center;
-    max-width: 1200px;
+    width: 80%;
+    padding: 20px;
+    gap: 40px;
 }
 
-.task {
-    min-width: 25%;
-    list-style: none;
+.ongoing-tasks h2,
+.completed-tasks h2 {
+    text-align: center;
 }
 
-.todo {
+.ongoing-tasks {
+    background-color: #f0f4f8;
+    padding: 15px;
+    border-radius: 5px;
+    margin-bottom: 20px;
+}
+
+.completed-tasks {
+    background-color: #d6e4ff;
+    padding: 15px;
+    border-radius: 5px;
+    margin-bottom: 20px;
+}
+
+.todo li {
     margin: 1rem;
-    /* background: rgb(247, 226, 223); */
-    /* color: black; */
     font-size: 19px;
     display: flex;
     justify-content: space-between;
     align-items: center;
     padding: 0.25em 0.5em;
     border-radius: 30px;
-    transition: background-color 200ms ease-in-out;
-}
-
-/* Items themes */
-.standard-todo {
-    background-color: rgb(26, 27, 27);
 }
 
 .light-todo {
-    background-color:#AEB1B4;
+    background-color: #aeb1b4;
 }
 
 .darker-todo {
     background-color: #01394c;
 }
 
-.task .task-name{
-    padding: 7px;
-    /* word-wrap: break-word; */
-    /* flex-wrap: wrap; */
+.task .task-name {
+    padding: 15px;
     font-size: 20px;
-    flex: 1; /* To push the trash and the check button to the right */
-    border-radius: 30px;
-
-    /* wraps the links */
-    overflow-wrap: anywhere;
+    flex: 1;
 }
 
-.done-button, .delete-button {
+.done-button,
+.delete-button {
     font-size: 19px;
     cursor: pointer;
     width: 2em;
@@ -286,25 +239,13 @@ footer {
     margin: 0 5px;
 }
 
-.todo-item {
-    padding: 0rem 0.5rem;
-}
-
-.fa-trash, .fa-check { 
+.fa-trash,
+.fa-check {
     pointer-events: none;
 }
 
-
-.task.completed .task-name {
+.completed {
     transition: 0.2s;
     text-decoration: line-through;
     opacity: 0.5;
 }
-
-
-.fall {
-    transition: 0.5s;
-    transform: translateY(45rem) rotateZ(45deg);
-    opacity: 0;
-}
-
